--- a/com.io7m.jvindicator.core/pom.xml
+++ b/com.io7m.jvindicator.core/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <artifactId>com.io7m.jvindicator</artifactId>
     <groupId>com.io7m.jvindicator</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
 
   <artifactId>com.io7m.jvindicator.core</artifactId>
