--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,13 @@
 
   <properties>
     <io7m.api.previousVersion>0.0.1-SNAPSHOT</io7m.api.previousVersion>
-    <logback.version>1.4.1</logback.version>
-    <slf4j.version>2.0.1</slf4j.version>
+    <logback.version>1.4.7</logback.version>
+    <slf4j.version>2.0.7</slf4j.version>
   </properties>
 
   <licenses>
     <license>
-      <name>ISC License</name>
+      <name>ISC</name>
       <url>https://www.io7m.com/license/isc.txt</url>
     </license>
   </licenses>
@@ -98,12 +98,12 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.9.0</version>
+        <version>5.9.3</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.9.0</version>
+        <version>5.9.3</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -123,12 +123,12 @@
       <dependency>
         <groupId>net.jqwik</groupId>
         <artifactId>jqwik-api</artifactId>
-        <version>1.6.5</version>
+        <version>1.7.3</version>
       </dependency>
       <dependency>
         <groupId>net.jqwik</groupId>
         <artifactId>jqwik-engine</artifactId>
-        <version>1.6.5</version>
+        <version>1.7.3</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
