--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.io7m.jvindicator</groupId>
   <artifactId>com.io7m.jvindicator</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3-SNAPSHOT</version>
 
   <packaging>pom</packaging>
   <name>com.io7m.jvindicator</name>
@@ -26,7 +26,7 @@
   </modules>
 
   <properties>
-    <io7m.api.previousVersion>0.0.1-SNAPSHOT</io7m.api.previousVersion>
+    <io7m.api.previousVersion>0.0.3-SNAPSHOT</io7m.api.previousVersion>
     <logback.version>1.4.11</logback.version>
     <slf4j.version>2.0.9</slf4j.version>
   </properties>
