--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
   </licenses>
 
   <scm>
-    <url>https://www.github.com/io7m/jvindicator</url>
-    <connection>scm:git:https://github.com/io7m/jvindicator</connection>
-    <developerConnection>scm:git:https://github.com/io7m/jvindicator</developerConnection>
+    <url>https://www.github.com/io7m-com/jvindicator</url>
+    <connection>scm:git:https://www.github.com/io7m-com/jvindicator</connection>
+    <developerConnection>scm:git:https://www.github.com/io7m-com/jvindicator</developerConnection>
   </scm>
 
   <developers>
@@ -55,7 +55,7 @@
   </developers>
 
   <issueManagement>
-    <url>https://www.github.com/io7m/jvindicator/issues</url>
+    <url>https://www.github.com/io7m-com/jvindicator/issues</url>
     <system>GitHub Issues</system>
   </issueManagement>
 
@@ -77,7 +77,7 @@
 
   <ciManagement>
     <system>GitHub Actions</system>
-    <url>https://github.com/jvindicator/actions</url>
+    <url>https://www.github.com/io7m-com/jvindicator/actions</url>
   </ciManagement>
 
   <prerequisites>
