Update README, changelog.

--- a/README.in
+++ b/README.in
@@ -1,6 +1,19 @@
 
+## jvindicator
 
-## Usage
+Trivial parameter validation functions intended for use in HTTP server
+applications.
+
+### Features
+
+* Type-safe parameter validation.
+* Written in pure Java 21.
+* [OSGi](https://www.osgi.org/) ready.
+* [JPMS](https://en.wikipedia.org/wiki/Java_Platform_Module_System) ready.
+* ISC license.
+* High-coverage automated test suite.
+
+### Usage
 
 Use the `Vindicator` class to build a validator, and then call `check()`. After
 calling `check()`, parameters can be inspected in a type-safe manner:
