--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,11 @@
   </modules>
 
   <properties>
+    <!-- Configuration. -->
     <io7m.api.previousVersion>0.0.3-SNAPSHOT</io7m.api.previousVersion>
     <io7m.java.targetJavaVersion>21</io7m.java.targetJavaVersion>
+
+    <!-- Third-party dependencies. -->
     <logback.version>1.5.6</logback.version>
     <slf4j.version>2.0.13</slf4j.version>
   </properties>
