--- a/README.in
+++ b/README.in
@@ -1,7 +1,7 @@
 
 ## jvindicator
 
-Trivial parameter validation functions intended for use in HTTP server
+Trivial parameter validation functions intended for use in HTTP servlet
 applications.
 
 ### Features
