--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <!-- Third-party dependencies. -->
     <logback.version>1.5.8</logback.version>
     <slf4j.version>2.0.16</slf4j.version>
+    <org.junit.version>5.11.0</org.junit.version>
   </properties>
 
   <licenses>
@@ -99,16 +100,15 @@
         <artifactId>org.osgi.annotation.versioning</artifactId>
         <version>1.1.2</version>
       </dependency>
+
       <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>5.11.0</version>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${org.junit.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.11.0</version>
-      </dependency>
+
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
